base/apps/home-automation/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    gethomepage.dev/description: Grafana Dashboards
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Home
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/name: Grafana
    gethomepage.dev/pod-selector: "app=grafana"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: grafana.home.internal
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8
spec:
  tls:
    - hosts:
        - grafana.home.internal
      secretName: grafana-ing-cert
  ingressClassName: nginx
  rules:
    - host: grafana.home.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
